--- a/static/style2.css
+++ b/static/style2.css
@@ -35,30 +35,9 @@
 .sidenavc a:hover {
     color: #ddd;
 }
-.custom-hamburger {
-    display: inline-block;
-    width: 30px;
-    height: 3px;
-    background-color: white;
-    position: relative;
-    margin-right: 10px;
-}
-
-.custom-hamburger::before,
-.custom-hamburger::after {
-    content: '';
-    position: absolute;
-    width: 30px;
-    height: 3px;
-    background-color: white;
-    left: 0;
-    transition: 0.3s ease;
-}
-
-.custom-hamburger::before {
-    top: -10px;
-}
-
-.custom-hamburger::after {
-    top: 10px;
+.hamburger{
+    color:white;
+    font-size: 40px;
+    margin-left: 13px;
+    margin-bottom:20px;
 }
