--- a/static/style2.css
+++ b/static/style2.css
@@ -36,7 +36,7 @@
     color: #ddd;
 }
 .hamburger{
-    color:white;
+    color:black;
     font-size: 100px;
     margin-left: 13px;
     margin-bottom:20px;
